<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.example.xaidcosta.calculadora.tela1">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/calculadora"
        android:id="@+id/textView" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/a"
        android:id="@+id/a"
        android:layout_marginTop="39dp"
        android:layout_below="@+id/textView"
        android:layout_toStartOf="@+id/calcular" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/b"
        android:id="@+id/b"
        android:layout_alignTop="@+id/a"
        android:layout_centerHorizontal="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/c"
        android:id="@+id/c"
        android:layout_alignTop="@+id/b"
        android:layout_toEndOf="@+id/calcular" />


    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/alterarA"
        android:id="@+id/alterara"
        android:layout_below="@+id/textView"
        android:layout_alignParentStart="true"
        android:layout_marginTop="106dp"
        android:onClick="abrirTela"
        />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/alterarB"
        android:id="@+id/alterarb"
        android:layout_alignTop="@+id/alterara"
        android:layout_centerHorizontal="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/alterarC"
        android:id="@+id/alterarc"
        android:layout_alignTop="@+id/alterarb"
        android:layout_alignParentEnd="true" />


    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Calcular"
        android:id="@+id/calcular"
        android:layout_marginBottom="84dp"
        android:layout_alignParentBottom="true"
        android:layout_alignStart="@+id/alterarb" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/resultado"
        android:layout_marginTop="25dp"
        android:layout_below="@+id/alterara"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/xlinha"
        android:id="@+id/x1"
        android:layout_centerVertical="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/x2linhas"
        android:id="@+id/x2"
        android:layout_below="@+id/x1"
        android:layout_alignParentStart="true"
        android:layout_marginTop="32dp" />


</RelativeLayout>
